--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,11 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "CatsByme"
-include ':app',
-        ':libs:arch'
-include ':libs:dstools'
+include ':app'
+
+// Core
+include ':core:domain'
+
+// Libs
+include ':libs:arch',
+        ':libs:dstools'
