:sparkles: feat:[CBM-1-7] Create core data layer

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,7 +16,8 @@ rootProject.name = "CatsByme"
 include ':app'
 
 // Core
-include ':core:domain'
+include ':core:data:remote',
+        ':core:domain'
 
 // Libs
 include ':libs:arch',
