:sparkles: feat: [CBM-1-9] Create core data local module

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,7 +16,8 @@ rootProject.name = "CatsByme"
 include ':app'
 
 // Core
-include ':core:data:remote',
+include ':core:data:local',
+        ':core:data:remote',
         ':core:domain'
 
 // Libs
