:sparkles: feat:[CBM-2-1] Implement breed domain layer

--- a/core/domain/build.gradle
+++ b/core/domain/build.gradle
@@ -10,5 +10,9 @@ android {
 }
 
 dependencies {
-// Libs
+// Modules
+    implementation project(Modules.arch)
+
+    // Libs
+    api libs.pagingCommon
 }
