--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,4 @@ include ':core:data:local',
 include ':libs:arch',
         ':libs:dstools'
 include ':core:common:navigation'
+include ':features:breeds'
