:bug: fix:  [CBM-2-3] Fix breed data layer

--- a/core/data/remote/build.gradle
+++ b/core/data/remote/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     implementation libs.loggingInterceptor
     implementation libs.okhttp
     implementation libs.paginCommonKtx
-    implementation libs.pagingRuntimeKtx
+    api libs.pagingRuntimeKtx
     implementation libs.pagingCommon
 }
