--- a/core/data/remote/build.gradle
+++ b/core/data/remote/build.gradle
@@ -14,7 +14,7 @@ android {
 
     defaultConfig {
         buildConfigField "String", "API_KEY", keyApiProperties['API_KEY']
-        buildConfigField "String", "API_URL", '"https://https://api.thecatapi.com/"'
+        buildConfigField "String", "API_URL", '"https://api.thecatapi.com/"'
     }
 
     buildFeatures {
