:heavy_check_mark: test:  [CBM-2-5] Create test units data and presentation layers

--- a/features/breeds/build.gradle
+++ b/features/breeds/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     implementation libs.pagingRuntimeKtx
     implementation libs.pagingCommon
     implementation libs.coil
+
+    testImplementation libs.coreTesting
 }
