:sparks: feat:[CBM-3-1] Create domain layer search module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     implementation project(Modules.dsTools)
     implementation project(Modules.navigation)
     implementation project(Modules.remote)
+    implementation project(Modules.search)
 }
