:sparkles: feat:[CBM-4-1] Create photos domain module and units test

--- a/settings.gradle
+++ b/settings.gradle
@@ -23,7 +23,9 @@ include ':app',
 
 // Features
         ':features:breeds',
+        ':features:images',
         ':features:search',
 // Libs
         ':libs:arch',
         ':libs:dstools'
+
