:sparkles: feat:[CBM-4-5] Implement navegation to photos and refactor README.md

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,6 @@ dependencies {
     implementation project(Modules.dsTools)
     implementation project(Modules.navigation)
     implementation project(Modules.remote)
+    implementation project(Modules.photos)
     implementation project(Modules.search)
 }
